# advanced-perception

./: README.md
color/: README.md  convnet.py  histograms.npy  histograms_train.csv  labels.npy  make_histograms.py  model.ipynb  modern-net.ipynb  net.ipynb  nn.py  original_net.ipynb  train.pkl
color/.ipynb_checkpoints/: make_histograms-checkpoint.ipynb  make_histograms-checkpoint.py  perceptron-checkpoint.ipynb
enhancement/: BBHE.cpp  CMakeCache.txt  CMakeLists.txt  CONTRAST.cpp  DSIHE.cpp  Makefile  README.md  cmake_install.cmake  contrast  contrast.cpp
finalproject/: README.md  losseval.npy  losstrain.npy  proposal.txt  requirements.txt  sbatch.script  train.py
finalproject/.ipynb_checkpoints/: train-checkpoint.py
finalproject/models/: espcnn.py  kernel.py  srcnn.py  transformer.py
finalproject/models/.ipynb_checkpoints/: srcnn-checkpoint.py  transformer-checkpoint.py
temporal/: README.md  helper.py  model.py  pipinstall.py  requirements.txt  scratch.ipynb  time.py  train.py
temporal/split/: test.npy  train.npy  val.npy
visionTransformer/: dataPreprocessing.ipynb  model.ipynb
visionTransformer/.ipynb_checkpoints/: dataPreprocessingForVisionTransformer-checkpoint.ipynb  model-checkpoint.ipynb
